2008-03-21  Adam Roben  <aroben@apple.com>

        Rename static info members to s_info

        This avoids conflicts with custom "info" methods, such as the one that
        will soon be added to Console.

        Reviewed by Ada Chan and Sam Weinig.

2008-03-21  David Hyatt  <hyatt@apple.com>

        <rdar://problem/5808863> Zooming should not let non-zero border width become zero

        Make sure zoomed values that begin >= 1 are not allowed to fall below 1.

        Reviewed by adele

        * css/CSSPrimitiveValue.cpp:
        (WebCore::CSSPrimitiveValue::computeLengthDouble):
        * loader/CachedImage.cpp:
        (WebCore::CachedImage::imageSize):
        (WebCore::CachedImage::imageRect):

2008-03-21  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Sam.

        -<rdar://problem/5712804> XMLHttpRequests do not show response contents, preview images (14313)
        -<rdar://problem/5712931> XMLHttpRequests should be shown separately and grouped (14315)
        -<rdar://problem/5732836> XMLHttpRequest: Inspector should show network activity/XHR in Console (17233)
        - Instrument the InspectorController to cache XHR resrouces since they are not cached by WebCore.
        The resources will be kept in the same map as all other resources so they will have the exact
        same lifecycle. 

        * ChangeLog:
        * page/InspectorController.cpp:
        (WebCore::InspectorCachedXMLHttpRequestResource::type):
        (WebCore::InspectorCachedXMLHttpRequestResource::setType):
        (WebCore::InspectorCachedXMLHttpRequestResource::data):
        (WebCore::InspectorCachedXMLHttpRequestResource::setData):
        (WebCore::InspectorCachedXMLHttpRequestResource::encoding):
        (WebCore::InspectorCachedXMLHttpRequestResource::setEncoding):
        (WebCore::InspectorCachedXMLHttpRequestResource::create):
        (WebCore::InspectorCachedXMLHttpRequestResource::InspectorCachedXMLHttpRequestResource):